--- a/Utilities.Security/Views/_ViewImports.cshtml
+++ b/Utilities.Security/Views/_ViewImports.cshtml
@@ -1,3 +1,7 @@
-﻿@using Utilities.Security
-@using Utilities.Security.Models
+﻿@using Utilities.Security.Controllers.Account
+@using Utilities.Security.Controllers.Consent
+@using Utilities.Security.Controllers.Grants
+@using Utilities.Security.Controllers.Device
+@using Utilities.Security.Controllers.Home
+@using Utilities.Security.Controllers.Diagnostics
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
